# tmptxt

./: .gitignore  Cargo.toml  NOTICE  README.md
scripts/: publish-to-github.sh
src/: app.rs  editor.rs  input.rs  main.rs  signals.rs  storage.rs  ui.rs
